--- a/Fomr/src/main/resources/config.properties
+++ b/Fomr/src/main/resources/config.properties
@@ -1,3 +1,3 @@
-db.url=jdbc:mysql://34.200.83.33:3306/indes
-db.username=admin
-db.pass=kbogio66766
+db.url=jdbc:mysql://127.0.0.1:3306/indes
+db.username=pruebas
+db.pass=11804081
